k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskProxyMarket
spec:
  selector:
    matchLabels:
      run: taskProxyMarket
  template:
    metadata:
      labels:
        run: taskProxyMarket
    spec:
      containers:
        - name: demo
          image: rasimaghayev/taskProxyMarket
          ports:
            - containerPort: 80
