k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskProxyMarket
spec:
  type: NodePort
  selector:
    run: taskProxyMarket
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31000
